--- a/Frontend/administratie-app/src/app/components/planning-importeren/planning-importeren.component.html
+++ b/Frontend/administratie-app/src/app/components/planning-importeren/planning-importeren.component.html
@@ -7,3 +7,5 @@
 </form>
 
 <p *ngIf="showMessage">Er zijn {{aantalCursussen}} nieuwe cursussen en {{aantalInstanties}} cursusinstanties toegevoegd</p>
+<p *ngIf="showDuplicateMessage">Er zijn {{aantalDuplicaten}} duplicaten aangetroffen!</p>
+<p id="error">{{errorMessage}}</p>
