--- a/Frontend/administratie-app/src/app/app.component.html
+++ b/Frontend/administratie-app/src/app/app.component.html
@@ -39,6 +39,11 @@
           <a class="nav-link" routerLink="/cursus-overzicht">Cursus Overzicht</a>
 
         </li>
+        <li class="nav-item" role="menuitem">
+
+          <a class="nav-link" routerLink="/cursus-toevoegen">Cursus toevoegen</a>
+
+        </li>
 
       </ul>
 
