--- a/Frontend/administratie-app/src/app/app.component.html
+++ b/Frontend/administratie-app/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-success">
+<nav class="navbar navbar-expand-lg navbar-dark bg-info">
 
   <div class="container">
 
